@@ -1,3 +1,6 @@
+// 06/24/2024
+- The Glow effect's color now can be changed
+
 // 06/23/2024
 - Added Glow effect
 
